--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
-    "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.4",
     "request": "^2.88.2",
     "sqlite3": "^5.1.7",
@@ -63,5 +62,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^5.9.3"
   }
 }
